@@ -21,12 +21,12 @@ import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertTrue;
 
-import com.hp.hpl.jena.rdf.model.Model;
-import com.hp.hpl.jena.rdf.model.ModelFactory;
-import com.hp.hpl.jena.rdf.model.Property;
-import com.hp.hpl.jena.rdf.model.Resource;
-import com.hp.hpl.jena.rdf.model.Statement;
-import com.hp.hpl.jena.rdf.model.StmtIterator;
+import org.apache.jena.rdf.model.Model;
+import org.apache.jena.rdf.model.ModelFactory;
+import org.apache.jena.rdf.model.Property;
+import org.apache.jena.rdf.model.Resource;
+import org.apache.jena.rdf.model.Statement;
+import org.apache.jena.rdf.model.StmtIterator;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Collection;
@@ -229,9 +229,9 @@ public class ServiceProviderRdfXmlTests extends TestsBase {
             // Make sure each service has one domain
             assertEquals(1, domains.size());
             // Make sure the domain is a resource with a URI
-            assertTrue(domains.get(0).getObject().isURIResource());
+            assertTrue(domains.getFirst().getObject().isURIResource());
             // Make sure one of the domains found in the services matches the test version
-            if (domains.get(0).getResource().getNameSpace().equals(testVersion)) {
+            if (domains.getFirst().getResource().getNameSpace().equals(testVersion)) {
                 domainFound = true;
             }
         }
