@@ -46,8 +46,7 @@ public class Messages {
         try {
             Messages.RESOURCE_BUNDLE.getString(newKey);
             String error =
-                    String.format(
-                            "The message key \"%s\" is wrong.  It should be \"%s\".",
+                    "The message key \"%s\" is wrong.  It should be \"%s\".".formatted(
                             key, newKey); // $NON-NLS-1$
             System.err.println(error);
             throw new RuntimeException(error);
